--- a/publication/stats_articles/2020_02_estimand_covid/index.html
+++ b/publication/stats_articles/2020_02_estimand_covid/index.html
@@ -334,7 +334,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9">Submitted</div>
+          <div class="col-xs-12 col-sm-9"><em>Statistics in Biopharmaceutical Research</em>, to appear</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
@@ -367,7 +367,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://oncoestimand.github.io/home/docs/onco_estimand_COVID-19_paper_v1.pdf" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline" href="https://arxiv.org/abs/2006.04480" target="_blank" rel="noopener">
   Preprint
 </a>
 
