--- a/publication/stats_articles/2020_01_estimand_covid/index.html
+++ b/publication/stats_articles/2020_01_estimand_covid/index.html
@@ -367,10 +367,10 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://arxiv.org/abs/2006.04480" target="_blank" rel="noopener">
-  Preprint
-</a>
 
+<a class="btn btn-primary btn-outline" href="https://doi.org/10.1080/19466315.2020.1785543" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
@@ -388,6 +388,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline" href="https://arxiv.org/abs/2006.04480" target="_blank" rel="noopener">
+  arxiv
+</a>
 
 
 
