--- a/publication/stats_articles/2020_01_estimand_covid/index.html
+++ b/publication/stats_articles/2020_01_estimand_covid/index.html
@@ -254,7 +254,7 @@
     <h1 itemprop="name">Assessing the impact of COVID-19 on the objective and analysis of oncology clinical trials - application of the estimand framework</h1>
     <span class="pub-authors" itemprop="author">
       
-      Evgeny Degtyarev, Kaspar Rufibach, Yue Shentu, Godwin Yung, Michelle Casey, Feng Liu, Yi Liu, Oliver Sailer, Jonathan Siegel, Steven Sun, Rui Tang, Jiangxiu Zhou
+      Evgeny Degtyarev<em>, Kaspar Rufibach</em>, Yue Shentu<em>, Godwin Yung</em>, Michelle Casey, Feng Liu, Yi Liu, Oliver Sailer, Jonathan Siegel, Steven Sun, Rui Tang, Jiangxiu Zhou
       
     </span>
     <span class="pull-right">
@@ -334,7 +334,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9"><em>Statistics in Biopharmaceutical Research</em>, to appear</div>
+          <div class="col-xs-12 col-sm-9"><em>Statistics in Biopharmaceutical Research</em>, to appear. *The first four authors contributed equally to this paper.</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
