--- a/publication/stats_articles/2020_01_estimand_covid/index.html
+++ b/publication/stats_articles/2020_01_estimand_covid/index.html
@@ -254,7 +254,7 @@
     <h1 itemprop="name">Assessing the impact of COVID-19 on the objective and analysis of oncology clinical trials - application of the estimand framework</h1>
     <span class="pub-authors" itemprop="author">
       
-      Evgeny Degtyarev, Kaspar Rufibach, Yue Shentu, Godwin Yung, Michelle Casey, Feng Liu, Yi Liu, Oliver Sailer, Jonathan Siegel, Steven Sun, Rui Tang, Jiangxiu Zhou
+      Evgeny Degtyarev, Kaspar Rufibach, Yue Shentu, Godwin Yung, Michelle Casey, Stefan Englert, Feng Liu, Yi Liu, Oliver Sailer, Jonathan Siegel, Steven Sun, Rui Tang, Jiangxiu Zhou
       
     </span>
     <span class="pull-right">
