--- a/publication/stats_articles/2020_01_estimand_covid/index.html
+++ b/publication/stats_articles/2020_01_estimand_covid/index.html
@@ -334,7 +334,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9"><em>Statistics in Biopharmaceutical Research</em>, to appear. *The first four authors contributed equally to this paper</div>
+          <div class="col-xs-12 col-sm-9"><em>Statistics in Biopharmaceutical Research</em>, 12(4), 427-437. *The first four authors contributed equally to this paper</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
